mdapipkg/objects/Interest_Template__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Business Travel Frequency</fullName>
                </value>
                <value>
                    <fullName>Communications Preferences</fullName>
                </value>
                <value>
                    <fullName>Community Service</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Family/Leisure Travel Frequency</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Health</fullName>
                </value>
                <value>
                    <fullName>Leadership</fullName>
                </value>
                <value>
                    <fullName>Learning More</fullName>
                </value>
                <value>
                    <fullName>Lifestyle</fullName>
                </value>
                <value>
                    <fullName>Management Team</fullName>
                </value>
                <value>
                    <fullName>Other Languages</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Regional Contacts</fullName>
                </value>
                <value>
                    <fullName>Sports</fullName>
                </value>
                <value>
                    <fullName>Team Sports</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>YPO</fullName>
                </value>
                <value>
                    <fullName>YPO Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest__c</fullName>
        <label>Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Antiques</fullName>
                </value>
                <value>
                    <fullName>Art Collecting</fullName>
                </value>
                <value>
                    <fullName>Dance</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Opera</fullName>
                </value>
                <value>
                    <fullName>Painting</fullName>
                </value>
                <value>
                    <fullName>Theatre</fullName>
                </value>
                <value>
                    <fullName>Buying Other Businesses</fullName>
                </value>
                <value>
                    <fullName>Career Transitions</fullName>
                </value>
                <value>
                    <fullName>CHLDFAMBUS</fullName>
                </value>
                <value>
                    <fullName>Developing My Board</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Africa</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Asia</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Australia/NZ</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Canada</fullName>
                </value>
                <value>
                    <fullName>Doing Business in China</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Europe</fullName>
                </value>
                <value>
                    <fullName>Doing Business in India</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Latin America</fullName>
                </value>
                <value>
                    <fullName>Doing Business in Middle East</fullName>
                </value>
                <value>
                    <fullName>Doing Business in United States</fullName>
                </value>
                <value>
                    <fullName>Examining Corporate Strategy</fullName>
                </value>
                <value>
                    <fullName>Exiting Family Business</fullName>
                </value>
                <value>
                    <fullName>Family Business (General Issues)</fullName>
                </value>
                <value>
                    <fullName>Going Global</fullName>
                </value>
                <value>
                    <fullName>Hiring &amp; Retaining Execs</fullName>
                </value>
                <value>
                    <fullName>Mergers/Acquisitions</fullName>
                </value>
                <value>
                    <fullName>New Sources of Capital</fullName>
                </value>
                <value>
                    <fullName>Selling My Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Validation Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Interest Template</label>
    <nameField>
        <displayFormat>ITT-{0000}</displayFormat>
        <label>Interest Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interest Template</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>